🎨 : correction gap sur certains navigateurs

--- a/src/ressources/css/fiche.css
+++ b/src/ressources/css/fiche.css
@@ -9,6 +9,8 @@ body {
   min-height: 100vh;
   grid-template-columns: 1fr 60vw;
   grid-template-rows: repeat(2, auto) 1fr;
+  column-gap: 1rem;
+  row-gap: 1rem;
   gap: 1rem;
   color: var(--couleur-ecriture);
 }
@@ -36,6 +38,8 @@ div.bloc-info {
   grid-column: 1;
   display: flex;
   flex-direction: column;
+  column-gap: 2rem;
+  row-gap: 2rem;
   gap: 2rem;
   border-radius: 0.6rem;
   padding: 1rem;
@@ -110,6 +114,8 @@ div.carte iframe {
     display: flex;
     min-height: -webkit-fill-available;
     flex-direction: column;
+    column-gap: 1.4rem;
+    row-gap: 1.4rem;
     gap: 1.4rem;
   }
 
